--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
             <ul class="top">
                 <li class="left"><a href="" >Über Google</a></li>
                 <li class="left"><a href="" >Store</a></li>
-                
                 <li class="right"><a href="" >Gmail</a></li>
                 <li class="right"><a href="" >Bilder</a></li>
             </ul>   
@@ -41,4 +40,16 @@
         
 
     </body>
+    <footer>
+        <div>
+            <ul>
+                <li class="left"><a href="">Werbeprogramme</a></li>
+                <li class="left"><a href="">Unternehmen</a></li>
+                <li class="left"><a href="">Wie funktioniert die Google Suche?</a></li>
+                <li class="right"><a href="">Datenschutzerklärung</a></li>
+                <li class="right"><a href="">Nutzungsbedingungen</a></li>
+                <li class="right"><a href="">Einstellungen</a></li>
+            </ul>
+        </div>
+    </footer>
 </html>
