Added flexbox functionality to footer. Added shadows for Buttons.

--- a/index.html
+++ b/index.html
@@ -41,15 +41,18 @@
 
     </body>
     <footer>
-        <div>
-            <ul>
-                <li class="left"><a href="">Werbeprogramme</a></li>
-                <li class="left"><a href="">Unternehmen</a></li>
-                <li class="left"><a href="">Wie funktioniert die Google Suche?</a></li>
-                <li class="right"><a href="">Datenschutzerklärung</a></li>
-                <li class="right"><a href="">Nutzungsbedingungen</a></li>
-                <li class="right"><a href="">Einstellungen</a></li>
-            </ul>
+        <div class="footer-container">
+            <div class="left-list">
+                <a href="">Werbeprogramme</a>
+                <a href="">Unternehmen</a>
+                <a href="">Wie funktioniert die Google Suche?</a>
+            </div>
+            <div class="right-list">
+                <a href="">Datenschutzerklärung</a>
+                <a href="">Nutzungsbedingungen</a>
+                <a href="">Einstellungen</a>
+            </div>
         </div>
+
     </footer>
 </html>
