--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
             <ul class="top">
                 <li class="left"><a href="" >Über Google</a></li>
                 <li class="left"><a href="" >Store</a></li>
-                <li class="right"><a href="https://github.com/DavidPfl"><img id="avatar" src="/images/github_avatar.png" alt="Github Avatar" title="Github Avatar"></a></li>
-                <li class="right"><a href=""><img id="nine-dots" src="/images/nine_dots.jpg" alt=""></a></li>
+                <li class="right"><a href="https://github.com/DavidPfl"><img id="avatar" src="images/github_avatar.png" alt="Github Avatar" title="Github Avatar"></a></li>
+                <li class="right"><a href=""><img id="nine-dots" src="images/nine_dots.jpg" alt=""></a></li>
                 <li class="right"><a href="" >Gmail</a></li>
                 <li class="right"><a href="" >Bilder</a></li>
                 
